--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -1,5 +1,5 @@
 <h2>New Tweet!</h2>
-<form action="/tweets" method="POST">
+<form class="tweet-compose" action="/tweets" method="POST">
   <input
       type="hidden"
       name="authenticity_token"
@@ -7,13 +7,14 @@
 
   <label>
     Content
-    <textarea name="tweet[content]"></textarea>
+    <textarea class="input" name="tweet[content]"></textarea>
+    <strong>140</strong>
   </label>
   <br>
 
   <label>
     Mention
-    <select name="tweet[mentioned_user_ids][]">
+    <select class="input" name="tweet[mentioned_user_ids][]">
       <option></option>
       <% User.all.each do |user| %>
         <option value="<%= user.id %>"><%= user.username %></option>
@@ -22,5 +23,5 @@
   </label>
   <br>
 
-  <input type="Submit" value="Post Tweet!">
+  <input class="input" type="Submit" value="Post Tweet!">
 </form>
