--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -12,15 +12,23 @@
   </label>
   <br>
 
-  <label>
-    Mention
-    <select class="input" name="tweet[mentioned_user_ids][]">
+  <a class="add-mentioned-user" href="#">Add Mention</a>
+
+  <div class="mentioned-users"></div>
+
+  <script id="mention-template" type="text/template">
+    <div>
+      <select class="input" name="tweet[mentioned_user_ids][]">
       <option></option>
       <% User.all.each do |user| %>
-        <option value="<%= user.id %>"><%= user.username %></option>
+      <option value="<%= user.id %>"><%= user.username %></option>
       <% end %>
-    </select>
-  </label>
+      </select>
+      <a class="remove-mentioned-user" href="#" >X</a>
+      <br>
+    </div>
+  </script>
+
   <br>
 
   <input class="input" type="Submit" value="Post Tweet!">
